build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt
See file:///home/cj/Desktop/code/2020-InfiniteRecharge/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt for all output for compileFrcUserProgramDebugExecutableFrcUserProgramCpp.
compiling BeltIntake.cpp successful.

compiling DriveSystem.cpp successful.

compiling Robot.cpp successful.

compiling MagLoader.cpp successful.

compiling Turret.cpp successful.
/home/cj/Desktop/code/2020-InfiniteRecharge/4788/src/main/cpp/Turret.cpp: In member function 'void Turret::AutoOnUpdate(double)':
/home/cj/Desktop/code/2020-InfiniteRecharge/4788/src/main/cpp/Turret.cpp:143:9: warning: unused variable 'targetX' [-Wunused-variable]
  double targetX = table->GetNumber("Target_X", 0);
         ^~~~~~~
/home/cj/Desktop/code/2020-InfiniteRecharge/4788/src/main/cpp/Turret.cpp:144:9: warning: unused variable 'targetY' [-Wunused-variable]
  double targetY = table->GetNumber("Target_Y", 0);
         ^~~~~~~

compiling ControlPannel.cpp successful.

compiling DriveAuto.cpp successful.

compiling TurretBackend.cpp successful.

compiling Main.cpp failed.
/home/cj/Desktop/code/2020-InfiniteRecharge/4788/src/main/cpp/Main.cpp:7:27: error: expected constructor, destructor, or type conversion at end of input
 CURTINFRC_ROBOT_MAIN(Robot)
                           ^

compiling MPStrategy.cpp successful.

compiling StrategySystem.cpp successful.

compiling wayfinder.cpp successful.

compiling MotionProfiling.cpp successful.

compiling StrategyController.cpp successful.

compiling Encoder.cpp successful.

compiling PressureSensor.cpp successful.

compiling LimitSwitch.cpp successful.

compiling StrategyBuilder.cpp successful.

compiling EncoderSwitch.cpp successful.

compiling NavX.cpp successful.

compiling NavX.robot.cpp successful.

compiling Compressor.cpp successful.

compiling BinaryServo.cpp successful.

compiling DoubleSolenoid.cpp successful.

compiling BinaryLimitMotor.cpp successful.

compiling BinaryEncoderMotor.cpp successful.

compiling VoltageController.cpp successful.

compiling DeployableDevice.cpp successful.

compiling Elevator.cpp successful.

compiling Inputs.cpp successful.

compiling NTProvider.cpp successful.

compiling Controllers.cpp successful.

compiling WheeledIntake.cpp successful.

compiling PneumaticIntake.cpp successful.

compiling SmartController.cpp successful.

compiling Toggle.cpp successful.

compiling RobotStartup.cpp successful.

compiling Files.cpp successful.

compiling WMLCtre.cpp successful.

compiling LoopSystem.cpp successful.

compiling UpdateGroup.cpp successful.

compiling WMLCtre.robot.cpp successful.

compiling PIDController.cpp successful.

compiling Filter.cpp successful.

compiling MotorFilters.cpp successful.

compiling ControlMap.cpp successful.

compiling Drivetrain.cpp successful.

compiling WMLRev.cpp successful.

compiling Climber.cpp successful.

Finished compileFrcUserProgramDebugExecutableFrcUserProgramCpp, see full log file:///home/cj/Desktop/code/2020-InfiniteRecharge/build/tmp/compileFrcUserProgramDebugExecutableFrcUserProgramCpp/output.txt.
